--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -23,9 +23,9 @@ This vignette loads the genomic breaks data, processes it and saves the
 resulting objects in a serialised R object (`RData` file) for reuse in other
 vignettes.
 
-Similar objects are stored in lists to avoid cluttering the environment.
+Related objects are stored in lists to avoid cluttering the environment.
 
-Pacakges and data
+Packages and data
 =================
 
 
