--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -174,6 +174,29 @@ gg_freq_poly(widths$unalMap |> subset(chr == "chr1")) +
   geom_vline(xintercept = 500)
 ```
 
+## Translocated regions
+
+```{r width_of_translocated_regions}
+tra <- sapply(coa, flagTranslocations)
+tra_only <- sapply(tra, filterTranslocations)
+sapply(tra_only, length)
+widths$tra <- makeWidthsDF(tra_only) |> tibble::as_tibble()
+widths$tra_op <- makeWidthsDF(sapply(tra_only, swap)) |> tibble::as_tibble()
+
+gg_freq_poly(widths$tra) +
+  aes(col=Arm) +
+  facet_wrap(~chr, scales = "free_y") +
+  ggtitle("Distribution of widths of translocated regions, split by arm.")
+
+gg_freq_poly(widths$tra_op) +
+  ggtitle("Distribution of widths of translocated regions (opposite side)")
+
+gg_freq_poly(widths$tra |> subset(chr == "chr1")) +
+  facet_wrap(~name, scales = "free_y", ncol=5) +
+  ggtitle("Distribution of widths of translocated regions on chr1 after collapsing, split by genome pair") +
+  geom_vline(xintercept = 500)
+```
+
 ## Double-coalesced regions
 
 ```{r re_coalesce}
